added 2nd para of content

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -3,11 +3,11 @@
   &lt;h1&gt;<span class="accent">About Us</span>&lt;/h1&gt;
   </h1>
 
-  <p>As you vibrate, you will enter into infinite inspiration that transcends understanding. Through Kabala, our brains are opened by energy. The akashic record may be the solution to what’s holding you back from an epic vision of self-actualization.</p>
+  <p>We came together as a diverse group of coding wannabes…..bringing a variety of talent from the music, business, education and service industries.  All here for the same goal => to be full stack developers.  After 6 months of full-time learning, lots of coffee, chocolate, donuts, deep breaths and happy hours...we have arrived!</p>
 
-  <p>You will soon be aligned by a power deep within yourself — a power that is life-affirming, zero-point. The world is approaching a tipping point. Soon there will be a maturing of power the likes of which the planet has never seen.</p>
+  <p>So watch out technology world.  We bring experience in JavaScript, HTML, CSS, Git,  Ionic, Vim and NodeJS. We support each other through teamwork and leadership and will bring those skills to help you succeed.</p>
 
-  <p>You and I are lifeforms of the solar system. By blossoming, we vibrate. The goal of expanding wave functions is to plant the seeds of joy rather than stagnation.</p>
+  <p>We are Cohort 11!</p>
 
   <div id="techRow">
     <div class="tech tech1"></div>
