--- a/_includes/studentLife.html
+++ b/_includes/studentLife.html
@@ -1,11 +1,11 @@
 <div id="studentLifeText">
   <h1>engageCommunity();</h1>
+  
+  <p>As an extension of learning our craft, NSS students are encouraged to participate in meetups, hackathons, technology conferences and other events outside the classroom that integrate us into the Nashville technology community at-large.</p>
 
-  <p>As you vibrate, you will enter into infinite inspiration that transcends understanding. Through Kabala, our brains are opened by energy. The akashic record may be the solution to what’s holding you back from an epic vision of self-actualization.</p>
+  <p>Cohort 11 has taken that suggestion to heart.  We have volunteered at BarCamp, Music City Code and Republic Schools, attended Global Game Jam and joined Girl Geek Dinners, WomenGetIT, NashJS, Code for Nashville and Nashville PHP.</p>
 
-  <p>You will soon be aligned by a power deep within yourself — a power that is life-affirming, zero-point. The world is approaching a tipping point. Soon there will be a maturing of power the likes of which the planet has never seen.</p>
-
-  <p>You and I are lifeforms of the solar system. By blossoming, we vibrate. The goal of expanding wave functions is to plant the seeds of joy rather than stagnation.</p>
+  <p>.....and that is just the beginning!</p>
 </div>
 
 <div id="studentLifePics">
