--- a/_includes/students.html
+++ b/_includes/students.html
@@ -8,11 +8,10 @@
         <div class="front" style="background-image: url({{post.imgUrl}})">
         <!-- front content -->
         </div>
-        <div class="back">
+        <div class="back" style="background: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9)),url({{post.imgUrl}})">
         <h2>{{post.firstName}} {{post.lastName}}</h2>
         <p>{{post.body}}</p>
-        <br>
-        <p><a href="{{post.websiteUrl}}">Portfolio</a></p>
+        <p><a href="{{post.websiteUrl}}">Portfolio</a> | <a href="{{post.githubUrl}}">Github</a> | <a href="{{post.linkedInUrl}}">LinkedIn</a></p>
         </div>
       </div>
     </div>
