--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -174,29 +174,6 @@ h1 {
 	box-shadow: 0 2px 4px #000;
 }
 
-.front.joshua {
-	background-image: url("card-demo-pic.jpg");
-}
-
-.front.sketch {
-	background-image: url("sketch.jpg");
-}
-
-.front.glasses {
-	background-image: url("glasses.jpg");
-}
-
-.front.james {
-	background-image: url("james.jpg");
-}
-
-.front.guitar {
-	background-image: url("guitar.jpg");
-}
-
-.front.paint {
-	background-image: url("paint.jpg");
-}
 
 /* entire individual container, keeps perspective */
 .flip-container {
@@ -205,35 +182,36 @@ h1 {
 	margin: 0 5px 10px;
 }
 	/* flip the pane when hovered */
-	.flip-container:hover .flipper, .flip-container.hover .flipper {
-		transform: rotateY(180deg);
-	}
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+	transform: rotateY(180deg);
+}
 
 .flip-container, .front, .back {
 	width: 215px;
 	height: 300px;
+  border-radius: 3px;
+
 }
 
 /* flip speed goes here */
 .flipper {
 	transition: 0.6s;
 	transform-style: preserve-3d;
-
 	position: relative;
 }
 
 /* hide back of pane during swap */
 .front, .back {
 	backface-visibility: hidden;
-
+  box-shadow: 1px 1px 2px #000;
 	position: absolute;
 	top: 0;
 	left: 0;
+	z-index: 2;
 }
 
 /* front pane, placed above back */
 .front {
-	z-index: 2;
 	/* for firefox 31 */
 	transform: rotateY(0deg);
 }
@@ -241,24 +219,27 @@ h1 {
 /* back, initially hidden pane */
 .back {
 	transform: rotateY(180deg);
-	background-color: #fff;
-}
-
-.back {
 	color: #000;
 	text-align: center;
 	box-sizing: border-box;
 	padding: 20px;
-}
 
-.back a {
-	text-decoration: none;
-	font-weight: bold;
-	color: #8ba854;
-}
+  h2 {
+    margin: 10px auto;
+    font-size: 1.25em;
+  }
 
-.back a:hover {
+  a {
+    font-size: 0.75em;
+  	text-decoration: none;
+  	font-weight: bold;
+  	color: #8ba854;
+  }
+
+  a:hover {
 	color: #5c742e;
+  }
+
 }
 
 
@@ -271,11 +252,11 @@ h1 {
 	background-size: cover;
 	font-family: Helvetica, Tahoma, sans-serif;
 	height: 680px;
-}
 
-#studentLifeText p {
-	width: 75%;
-	text-shadow: 2px 0px 4px rgba(0,0,0,0.6);
+  p {
+    width: 75%;
+    text-shadow: 2px 0px 4px rgba(0,0,0,0.6);
+  }
 }
 
 
