switch to materialize carousel

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,9 +1,12 @@
 <!-- JQUERY -->
-<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script src="scripts/jquery.min.js"></script>
 <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
 <!-- BOOTSTRAP -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+<!-- Materialize Carousel-->
+<script src="scripts/carousel.js"></script>
 
 <!-- OUR SCRIPTS -->
 <script src="scripts/main.js"></script>
