--- a/_includes/studentLife.html
+++ b/_includes/studentLife.html
@@ -1,6 +1,6 @@
 <div id="studentLifeText">
   <h1>engageCommunity();</h1>
-  
+
   <p>As an extension of learning our craft, NSS students are encouraged to participate in meetups, hackathons, technology conferences and other events outside the classroom that integrate us into the Nashville technology community at-large.</p>
 
   <p>Cohort 11 has taken that suggestion to heart.  We have volunteered at BarCamp, Music City Code and Republic Schools, attended Global Game Jam and joined Girl Geek Dinners, WomenGetIT, NashJS, Code for Nashville and Nashville PHP.</p>
@@ -9,54 +9,13 @@
 </div>
 
 <div id="studentLifePics">
-  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-    </ol>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="/images/photo.jpg" alt="students">
-        <div class="carousel-caption">
-         <!-- captions go here -->
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="/images/photo1.jpg" alt="other students">
-        <div class="carousel-caption">
-          <!-- captions go here -->
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="/images/photo2.jpg" alt="NSS door">
-        <div class="carousel-caption">
-          <!-- captions go here -->
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="/images/photo3.jpg" alt="more students">
-        <div class="carousel-caption">
-            <!-- captions go here -->
-        </div>
-      </div>
-    </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+  <div class="carousel">
+    <a class="carousel-item" href="#one!"><img src="/images/photo.jpg"></a>
+    <a class="carousel-item" href="#two!"><img src="/images/photo2.jpg"></a>
+    <a class="carousel-item" href="#three!"><img src="/images/photo3.jpg"></a>
+    <a class="carousel-item" href="#four!"><img src="/images/photo3.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="/images/photo3.jpg"></a>
   </div>
+
 </div>
