Add favicon, bluetint2 and hex3 photos, changes to includes and page styles

--- a/_includes/studentLife.html
+++ b/_includes/studentLife.html
@@ -1,11 +1,15 @@
 <div id="studentLifeText">
   <h1>engageCommunity();</h1>
-  
+
   <p>As an extension of learning our craft, NSS students are encouraged to participate in meetups, hackathons, technology conferences and other events outside the classroom that integrate us into the Nashville technology community at-large.</p>
 
   <p>Cohort 11 has taken that suggestion to heart.  We have volunteered at BarCamp, Music City Code and Republic Schools, attended Global Game Jam and joined Girl Geek Dinners, WomenGetIT, NashJS, Code for Nashville and Nashville PHP.</p>
 
   <p>.....and that is just the beginning!</p>
+</div>
+
+<div id="studentHexPics">
+<img src="/images/hex3.png" class="hexes" alt="preview photos of student life">
 </div>
 
 <div id="studentLifePics">
