--- a/_includes/studentLife.html
+++ b/_includes/studentLife.html
@@ -11,11 +11,49 @@
 <div id="studentLifePics">
 
   <div class="carousel">
-    <a class="carousel-item" href="#one!"><img src="/images/photo.jpg"></a>
-    <a class="carousel-item" href="#two!"><img src="/images/photo2.jpg"></a>
-    <a class="carousel-item" href="#three!"><img src="/images/photo3.jpg"></a>
-    <a class="carousel-item" href="#four!"><img src="/images/photo3.jpg"></a>
-    <a class="carousel-item" href="#five!"><img src="/images/photo3.jpg"></a>
+    <a class="carousel-item" href="#one!"><img src="/images/cpic1.jpg"></a>
+    <a class="carousel-item" href="#two!"><img src="/images/cpic2.jpg"></a>
+    <a class="carousel-item" href="#three!"><img src="/images/cpic3.jpg"></a>
+    <a class="carousel-item" href="#four!"><img src="/images/cpic4.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="/images/cpic5.jpg"></a>
+    <a class="carousel-item" href="#six!"><img src="/images/cpic6.jpg"></a>
+    <a class="carousel-item" href="#seven!"><img src="/images/cpic7.jpg"></a>
+    <a class="carousel-item" href="#eight!"><img src="/images/cpic8.jpg"></a>
+    <a class="carousel-item" href="#nine!"><img src="/images/cpic9.jpg"></a>
+    <a class="carousel-item" href="#ten!"><img src="/images/cpic10.jpg"></a>
+    <a class="carousel-item" href="#eleven!"><img src="/images/cpic11.png"></a>
+    <a class="carousel-item" href="#twelve!"><img src="/images/cpic12.jpg"></a>
+    <a class="carousel-item" href="#thirteen!"><img src="/images/cpic13.jpg"></a>
+    <a class="carousel-item" href="#fourteen!"><img src="/images/cpic14.jpg"></a>
+    <a class="carousel-item" href="#fifteen!"><img src="/images/cpic15.jpg"></a>
+    <a class="carousel-item" href="#sixteen!"><img src="/images/cpic16.jpg"></a>
+    <a class="carousel-item" href="#seventeen!"><img src="/images/cpic17.jpg"></a>
+    <a class="carousel-item" href="#eighteen!"><img src="/images/cpic18.jpg"></a>
+    <a class="carousel-item" href="#nineteen!"><img src="/images/cpic19.jpg"></a>
+    <a class="carousel-item" href="#twenty!"><img src="/images/cpic20.jpg"></a>
+    <a class="carousel-item" href="#twentyOne!"><img src="/images/cpic21.jpg"></a>
+    <a class="carousel-item" href="#twentyTwo!"><img src="/images/cpic22.jpg"></a>
+    <a class="carousel-item" href="#twentyThree!"><img src="/images/cpic23.jpg"></a>
+    <a class="carousel-item" href="#twentyFour!"><img src="/images/cpic24.jpg"></a>
+    <a class="carousel-item" href="#twentyFive!"><img src="/images/cpic25.jpg"></a>
+    <a class="carousel-item" href="#twentySix!"><img src="/images/cpic26.jpg"></a>
+    <a class="carousel-item" href="#twentySeven!"><img src="/images/cpic27.jpg"></a>
+    <a class="carousel-item" href="#twentyEight!"><img src="/images/cpic28.jpg"></a>
+    <a class="carousel-item" href="#twentyNine!"><img src="/images/cpic29.jpg"></a>
+    <a class="carousel-item" href="#thirty!"><img src="/images/cpic30.jpg"></a>
+    <a class="carousel-item" href="#thirtyOne!"><img src="/images/cpic31.jpg"></a>
+    <a class="carousel-item" href="#thirtyTwo!"><img src="/images/cpic32.jpg"></a>
+    <a class="carousel-item" href="#thirtyThree!"><img src="/images/cpic33.jpg"></a>
+    <a class="carousel-item" href="#thirtyFour!"><img src="/images/cpic34.jpg"></a>
+    <a class="carousel-item" href="#thirtyFive!"><img src="/images/cpic35.jpg"></a>
+    <a class="carousel-item" href="#thirtySix!"><img src="/images/cpic36.jpg"></a>
+    <a class="carousel-item" href="#thirtySeven!"><img src="/images/cpic37.jpg"></a>
+    <a class="carousel-item" href="#thirtyEight!"><img src="/images/cpic38.jpg"></a>
+    <a class="carousel-item" href="#thirtyNine!"><img src="/images/cpic40.jpg"></a>
+    <a class="carousel-item" href="#forty!"><img src="/images/cpic41.jpg"></a>
   </div>
-
 </div>
+
+
+
+
