Add finished technology icons to page, upload jpg files

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -10,18 +10,18 @@
   <p>We are Cohort 11!</p>
 
   <div id="techRow">
-    <div class="tech tech1"></div>
-    <div class="tech tech2"></div>
-    <div class="tech tech3"></div>
-    <div class="tech tech4"></div>
-    <div class="tech tech5"></div>
-    <div class="tech tech6"></div>
-    <div class="tech tech7"></div>
-    <div class="tech tech8"></div>
-    <div class="tech tech8"></div>
-    <div class="tech tech8"></div>
-    <div class="tech tech8"></div>
-    <div class="tech tech8"></div>
+    <div class="tech tech1" title="MongoDB"></div>
+    <div class="tech tech2" title="AngularJS"></div>
+    <div class="tech tech3" title="Node.js"></div>
+    <div class="tech tech4" title="HTML5"></div>
+    <div class="tech tech5" title="CSS3"></div>
+    <div class="tech tech6" title="Javascript"></div>
+    <div class="tech tech7" title="Sass"></div>
+    <div class="tech tech8" title="jQuery"></div>
+    <div class="tech tech9" title="Firebase"></div>
+    <div class="tech tech10" title="PostgreSQL"></div>
+    <div class="tech tech11" title="Ionic"></div>
+    <div class="tech tech12" title="Git"></div>
   </div>
 
 </div>
